2014-12-20  Ben Finney  <ben+python@benfinney.id.au>

    * Remove custom test suite creation, we now use ‘unittest2’.
    * Discriminate Python 2-and-3 compatible usage of dict methods.
    * Discriminate Python 2-and-3 compatible bytes versus text.
    * Declare explicit absolute and relative imports.

2014-12-19  Ben Finney  <ben+python@benfinney.id.au>

    Version 1.5.7 released.

    * Migrate to ‘mock’ library for mock objects in tests.
      This will ease the port to Python 3, which has ‘mock’ in the
      standard library.
    * Migrate to ‘testscenarios’ library for unit test scenarios.
    * Migrate to ‘unittest2’ library for back-ported improvements.
    * Add a hacking guide for developers.

2014-12-16  Ben Finney  <ben+python@benfinney.id.au>

    * Declare support explicitly for Python 2 only.
    * Wrap standard library imports where names changed in Python 3.

2014-12-15  Ben Finney  <ben+python@benfinney.id.au>

    * Wrap the ‘fromlist’ parameter of ‘__import__’ for Python 3
      compatibility.

2014-12-12  Ben Finney  <ben+python@benfinney.id.au>

    * Document the security impact of the default umask.

2014-12-11  Ben Finney  <ben+debian@benfinney.id.au>

    * Include test suite with source distribution.

2014-12-10  Ben Finney  <ben+python@benfinney.id.au>

    Version 1.5.6 released.

    * Declare a maximum compatible version of ‘lockfile’ library.

2014-11-27  Ben Finney  <ben+python@benfinney.id.au>

    * Use ‘pydoc.splitdoc’ to get package description text.
    * Remove ASCII translation of package description, not needed now the
      docstring is a proper Unicode text value.
    * Move package metadata to ‘daemon/_metadata.py’.
    * Move version string to a plain-text data file, ‘VERSION’.
    * Get version string at run-time from installed distribution.
    * Add unit tests for metadata.

2014-08-05  Ben Finney  <ben+python@benfinney.id.au>

    * Update package homepage to Alioth hosted project page.
